@@ -2,3 +2,6 @@
 This is the server backend of KMess Likeback. It is released under the GNU General Public License 2.0.
 This file will be updated with instructions on installing it.
 Likeback was originally included in BasKet Note Pads. It was ported to KDE4 by Valerio Pilo.
+
+Dependencies:
+* Smarty - The template parsing library
