@@ -1,0 +1,14 @@
+Hi!
+
+A developer responded on your recent LikeBack feedback message. This is the message you sent us:
+
+{$comment}
+
+A developer, {$developer}, wrote this message to you:
+
+{$remark}
+
+If you need to reply to this message, please use the original LikeBack form within the application.
+
+Thank you for using LikeBack!
+The {$project} developers
